# GIF643-S6i-APP1

./: .gitignore  CMakeLists.txt  README.md  liste_taches.csv
.devcontainer/: devcontainer.json
scripts/: gen_tasks.py  multi_proc.py  run_batch.sh  run_batch_mp.sh  test_single.md5  test_single.sh
src/: asset_conv.cpp  lab_ex1.cpp  lab_ex2.cpp  log.txt  nanosvg.c
